# BitDogLab_HTTPDd_workspace

./: .gitignore  BITDOGLAB_PINS.md  CMakeLists.txt  README.md  lwipopts.h  lwipopts_examples_common.h  pico_httpd.c
content/: 404.html  index.shtml  state.shtml
content/css/: style.css
content/js/: app.js
docs/: BITDOGLAB_PINS.md  busy_wait_vs_sleep_lwip.md
lib/I2C-proxy/: I2C.cpp  I2C.hpp  I2C_freeRTOS.cpp  I2C_freeRTOS.hpp
lib/OLED_SSD1306/: CMakeLists.txt  big_font.h  oled.c  oled.h  oled_freeRTOS.c  oled_freeRTOS.h  ssd1306.h  ssd1306_font.h  ssd1306_i2c.c  ssd1306_i2c.h
lib/log_vt100/: log_vt100.c
lib/matrix_led_bitdoglab/: neopixel_pio.c
lib/matriz_led_bitdoglab/: neopixel_pio.c
lib/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
lib/ws2812.bugado/: ws2812.pio
